Fixed Ontology page display on tablet and mobile

--- a/src/scss/_patches.scss
+++ b/src/scss/_patches.scss
@@ -56,6 +56,11 @@ nav {
     position: absolute;
     right: 0;
     width: auto !important;
+
+    @media #{$medium-and-down} {
+      display: flex;
+      max-width: 50%;
+    }
   }
 }
 
